statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: app
  serviceName: "service"
  replicas: 1
  template:
    metadata:
      labels:
        app: mypod
    spec:
      containers:
        - name: service
          image: nginx
          args:
            - sleep
            - infinity
          volumeMounts:
            - mountPath: "/data"
              name: csi-pvc
  volumeClaimTemplates:
    - metadata:
        name: csi-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
        storageClassName: do-block-storage
